# glic-metal

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FILE-STRUCTURE.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  presets.upstream.sha256  server.py
.github/workflows/: ci.yml
apps/: glic_webcam_preview.mm
benchmarks/: original_realtime_benchmark.cpp  realtime_benchmark.cpp
cmake/: GlicMetalConfig.cmake.in  GlicMetalResources.cmake
config/: fast-match-allowlist.json  public-release-policy.json
docs/: AI_INTEGRATION.md  BUILDING.md  CODEC_GLITCH.md  CODEC_LAB.md  DOWNSTREAM_QUICKSTART.md  EMBEDDING.md  GLITCH_EXPANSION.md  MULTICODEC_GLITCH.md  NATIVE_SYNTAX_GLITCH.md  OFFLINE_PACKET_GLITCH.md  ORIGINAL_PRESET_REALTIME.md  PUBLIC_RELEASE.md  original-preset-catalog.md
examples/: embed_c.c  quick_start.sh  test_presets.sh
include/: module.modulemap
include/glic_metal/: codec_glitch.h  glic_metal.h  glic_metal_metal.h  glitch_presets.h
resources/: GLICWebcamPreview-Info.plist  SDK-README.md  codec-lab-effects.json  integration-manifest.json  offline-codec-effects.json  selected-presets.json
scripts/: analyze_original_visual_tier.py  analyze_search_images.py  build_av2_reference.py  build_codec_lab_native.sh  build_fast_match_allowlist.py  build_macos_sdk.sh  build_original_preset_catalog.py  build_ranked_catalog.sh  build_search_catalog.py  build_vvc_reference.py  certify_search_performance.py  check_public_release.py  compare_original_metal_reference.py  evaluate_codec_glitch_videos.py  evaluate_native_syntax_glitches.py  evaluate_offline_packet_glitches.py  evolutionary_codec_search.py  generate_codec_glitch_candidate_bank.py  generate_mixed_glitch_selection.py  install_ffglitch_reference.py  native_syntax_glitch.py  perceptual_image_features.py  probe_multicodec_capabilities.py  process_codec_lab.py  process_metadata_glitch.py  process_multicodec_glitch.py  process_native_syntax_glitch.py  process_offline_packet_glitch.py  process_structured_codec_glitch.py  process_transport_glitch.py  process_video.py  rank_search_results.py  run_original_metal_validation.sh  run_ranking_watcher.sh  run_search_supervisor.sh  select_novel_moderate_presets.py  structured_bitstream.py  transport_glitch.py  validate_original_metal_run.py  write_original_metal_manifest.py
src/: bitio.cpp  bitio.hpp  codec_glitch.hpp  codec_glitch.mm  codec_glitch_c.mm  codec_glitch_c_stub.cpp  colorspaces.cpp  colorspaces.hpp  config.hpp  effects.cpp  effects.hpp  encoding.cpp  encoding.hpp  glic.cpp  glic.hpp  glic_metal_c.cpp  glic_realtime.metal  glitch_presets.cpp  main.cpp  original_realtime.cpp  original_realtime.hpp  original_realtime_metal.hpp  original_realtime_metal.mm  original_realtime_metal_kernel.metal  original_realtime_metal_stub.cpp  planes.cpp  planes.hpp  prediction.cpp  prediction.hpp  preset_loader.cpp  preset_loader.hpp  processing_math.hpp  processing_random.hpp  quantization.cpp  quantization.hpp  realtime.cpp  realtime.hpp  realtime_certification.cpp  realtime_certification.hpp  realtime_cpu.cpp  (+9 more)
tests/: codec_glitch_tests.mm  embed_c_api_tests.c  embed_metal_api_tests.mm  glitch_presets_tests.c  original_realtime_metal_tests.mm  original_realtime_tests.cpp  preset_loader_tests.cpp  realtime_metal_interop_tests.mm  realtime_tests.cpp  run_installed_consumer.cmake  run_subdirectory_consumer.cmake  test_analyze_original_visual_tier.py  test_build_fast_match_allowlist.py  test_codec_lab.py  test_codec_motion_extractor.py  test_compare_original_metal_reference.py  test_evaluate_codec_glitch_videos.py  test_integration_manifest.py  test_metadata_glitch.py  test_native_syntax_glitch.py  test_offline_packet_glitch.py  test_original_preset_catalog.py  test_original_visual_filter.py  test_process_multicodec_glitch.py  test_process_video_helpers.py  test_search_ranking.py  test_select_novel_moderate_presets.py  test_structured_bitstream.py  test_structured_codec_glitch.py  test_transport_glitch.py  test_write_original_metal_manifest.py
tests/consumer/: CMakeLists.txt  main.c
tests/subdirectory_consumer/: CMakeLists.txt
tools/: codec_glitch_filter.mm  evaluate_effect_difference.py  glic_extract_mvs.c  original_visual_filter.cpp  realtime_certify.cpp  realtime_filter.cpp  realtime_search.cpp
website/: index.html
